2006-10-09 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/BinaryOp.h: always snap geoms to
	  each-other before applying an overlay (temp hack).
	* source/operation/overlay/OverlayOp.cpp: enable all overlay 
	  result validators, make it disablable at compile time.

2006-10-05 Mateusz Loskot <mateusz@loskot.net>

	* capi/geos_c.h.in, 
	  capi/geos_c.h.vc: Added inclusion guards. 

2006-10-05 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/XMLTester.cpp: increment areatest verbosity
	  (needs -v -v)

2006-09-07 Howard Butler <hobu@hobu.net>

	* GEOSEnvelope wasn't in the PROTOTYPES section in geos_c.cpp

2006-09-07 Sandro Santilli <strk@refractions.net>

	* source/operation/distance/DistanceOp.cpp (computeMinDistancePoints):
	  fixed invalid reference.
	* autogen.sh: don't giveup on automake failures (testing)

2006-09-06 Sandro Santilli <strk@refractions.net>

	* tests/unit/operation/overlay/OffsetPointGeneratorTest.cpp
	  tests/unit/Makefile.am: new test for OffsetPointGenerator class
	* tests/unit/operation/overlay/FuzzyPointLocatorTest.cpp,
	  tests/unit/Makefile.am: new test for FuzzyPointLocator class

2006-09-06 Mateusz Loskot <mateusz@loskot.net>

	* source/operation/overlay/OverlayResultValidator.cpp,
	  source/operation/overlay/OffsetPointGenerator.cpp,
	  source/headers/geos/operation/overlay/OffsetPointGenerator.h,
	  source/headers/geos/operation/overlay/OverlayResultValidator.h:
	  Set svn:keyword property for $Id$ expansion.

2006-09-06 Sandro Santilli <strk@refractions.net>

	* tests/unit/precision/GeometrySnapperTest.cpp: 
	  updated after GeometrySnapper interface change.
	* source/operation/overlay/FuzzyPointLocator.cpp,
	  source/operation/overlay/OverlayResultValidator.cpp,
	  source/operation/overlay/OffsetPointGenerator.cpp,
	  source/operation/overlay/Makefile.am,
	  source/headers/geos/operation/overlay/OffsetPointGenerator.h,
	  source/headers/geos/operation/overlay/Makefile.am,